// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile test Tile changes color without errors 1`] = `
Tile {
  "color": "red",
  "position": Vector2D {
    "x": 0,
    "y": 0,
  },
}
`;

exports[`Tile test Tile changes color without errors 2`] = `
Tile {
  "color": "blue",
  "position": Vector2D {
    "x": 0,
    "y": 0,
  },
}
`;

exports[`Tile test Tile creates without errors 1`] = `
Tile {
  "color": "red",
  "position": Vector2D {
    "x": 0,
    "y": 0,
  },
}
`;
